Improvements: UI improvements and consistency

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
             android:layout_width="match_parent"
             android:layout_margin="10dp"
             android:layout_height="0dp"
+            tools:listitem="@layout/component_rule"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView8"/>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
