--- a/app/src/main/res/layout/activity_app_select.xml
+++ b/app/src/main/res/layout/activity_app_select.xml
@@ -26,6 +26,7 @@
                 android:id="@+id/app_card_recycler"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                tools:listitem="@layout/component_app_select_card"
                 android:layout_margin="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/app_search_bar" app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/app_select_confirm_button"/>
