--- a/app/src/main/res/layout/activity_edit_rule.xml
+++ b/app/src/main/res/layout/activity_edit_rule.xml
@@ -26,17 +26,16 @@
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" android:id="@+id/cardView2"
             app:cardCornerRadius="10dp"
-            android:layout_margin="6dp">
+            android:layout_margin="8dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-                android:padding="6dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
             <TextView
                     android:text="Rule Name"
                     android:textSize="18dp"
-                    android:layout_margin="4dp"
+                    android:layout_margin="12dp"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" android:id="@+id/edit_rule_name"
                     app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
@@ -45,6 +44,7 @@
             <Switch
                     android:text=""
                     android:layout_width="wrap_content"
+                    android:layout_margin="4dp"
                     android:layout_height="wrap_content" android:id="@+id/edit_rule_activate_switch"
                     app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
@@ -57,7 +57,7 @@
             app:cardCornerRadius="10dp"
             app:layout_constraintTop_toBottomOf="@+id/cardView2" android:id="@+id/cardView3"
             android:backgroundTint="?attr/colorOnSecondary"
-            android:layout_margin="6dp">
+            android:layout_margin="8dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -100,6 +100,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="6dp"
                         android:layout_marginBottom="6dp"
+                        tools:listitem="@layout/item_app"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        android:orientation="horizontal"
                         android:id="@+id/edit_rule_selected_apps_recycler"
                         app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
@@ -118,22 +121,25 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:cardCornerRadius="10dp"
             android:backgroundTint="?attr/colorOnSecondary"
-            android:layout_margin="6dp" android:id="@+id/cardView4">
+            android:layout_margin="8dp" android:id="@+id/cardView4">
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="6dp">
+                android:padding="8dp">
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" android:id="@+id/constraintLayout">
+                    android:layout_height="match_parent" android:id="@+id/constraintLayout"
+                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent">
                 <Spinner
                         android:layout_width="0dp"
                         android:layout_height="36dp" android:id="@+id/edit_rule_filter_type_spinner"
                         app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/edit_rule_keyword_inclusion_chip"/>
+                        app:layout_constraintEnd_toStartOf="@+id/edit_rule_keyword_inclusion_chip"
+                        app:layout_constraintBottom_toBottomOf="parent"/>
                 <com.google.android.material.chip.Chip
                         app:chipMinHeight="42dp"
                         android:text="INCL"
@@ -143,7 +149,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="36dp" android:id="@+id/edit_rule_keyword_inclusion_chip"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/edit_rule_keyword_operation_chip"/>
+                        app:layout_constraintEnd_toStartOf="@+id/edit_rule_keyword_operation_chip"
+                        app:layout_constraintBottom_toBottomOf="parent"/>
                 <com.google.android.material.chip.Chip
                         app:chipMinHeight="42dp"
                         android:text="OR"
@@ -151,7 +158,8 @@
                         android:checkable="false"
                         android:layout_width="wrap_content"
                         android:layout_height="36dp" android:id="@+id/edit_rule_keyword_operation_chip"
-                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
+                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -159,10 +167,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-                    tools:layout_editor_absoluteX="6dp">
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">
+
                 <com.google.android.material.chip.ChipGroup
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="4dp"
                         app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent" android:id="@+id/edit_rule_keyword_chip_container">
 
@@ -172,7 +182,9 @@
                         android:layout_width="match_parent"
                         android:id="@+id/edit_rule_add_keywords_container"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toBottomOf="@+id/edit_rule_keyword_chip_container">
+                        app:layout_constraintTop_toBottomOf="@+id/edit_rule_keyword_chip_container"
+                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent">
 
                     <EditText
                             android:layout_width="0dp"
@@ -181,6 +193,8 @@
                             android:text=""
                             android:hint="Enter Keyword"
                             android:ems="10"
+                            android:layout_marginRight="8dp"
+                            android:layout_marginLeft="4dp"
                             android:id="@+id/edit_rule_keyword_input_text"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -189,7 +203,9 @@
                     <TextView
                             android:text="Add"
                             android:textSize="20dp"
-                            android:layout_marginRight="5dp"
+                            android:layout_marginRight="4dp"
+                            android:textColor="?attr/colorPrimary"
+                            style="butto"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" android:id="@+id/edit_rule_add_keyword_button"
                             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
@@ -209,12 +225,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:cardCornerRadius="10dp"
             android:backgroundTint="?attr/colorOnSecondary"
-            android:layout_margin="6dp" android:id="@+id/cardView8"
+            android:layout_margin="8dp" android:id="@+id/cardView8"
             app:layout_constraintTop_toBottomOf="@+id/cardView4">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:padding="4dp"
+                android:layout_width="match_parent" android:paddingVertical="6dp"
                 android:layout_height="wrap_content">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -226,7 +241,9 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
+                        android:layout_height="match_parent"
+                        android:paddingRight="2dp"
+                        app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                         android:id="@+id/constraintLayout6">
 
@@ -235,12 +252,12 @@
                             android:layout_height="wrap_content"
                             android:textSize="18dp"
                             android:layout_width="0dp"
-                            android:layout_margin="10dp"
+                            android:layout_marginHorizontal="12dp"
                             android:id="@+id/textView11"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintEnd_toStartOf="@+id/edit_rule_toggle_vibration_switch"/>
+                            app:layout_constraintEnd_toStartOf="@+id/edit_rule_toggle_vibration_switch"
+                            app:layout_constraintBottom_toBottomOf="parent"/>
                     <Switch
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -249,9 +266,12 @@
                             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"/>
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
+                        android:layout_marginTop="6dp"
                         android:paddingBottom="6dp"
+                        android:layout_marginHorizontal="12dp"
                         android:layout_height="wrap_content" android:id="@+id/edit_rule_edit_vibration_container"
                         app:layout_constraintTop_toBottomOf="@+id/constraintLayout6"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -261,7 +281,6 @@
                     <LinearLayout
                             android:orientation="horizontal"
                             android:layout_width="match_parent"
-                            android:layout_margin="4dp"
                             android:id="@+id/edit_rule_vibration_step_container"
                             android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">
@@ -415,7 +434,10 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" android:id="@+id/constraintLayout7"
+                        android:layout_height="match_parent"
+                        android:paddingRight="2dp"
+                        android:layout_marginTop="4dp"
+                        android:id="@+id/constraintLayout7"
                         app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent">
 
@@ -424,7 +446,7 @@
                             android:layout_height="wrap_content"
                             android:textSize="18dp"
                             android:layout_width="0dp"
-                            android:layout_margin="10dp"
+                            android:layout_marginHorizontal="12dp"
                             android:id="@+id/textView16"
                             app:layout_constraintEnd_toStartOf="@+id/edit_rule_toggle_sound_switch"
                             app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
@@ -444,7 +466,6 @@
                         android:visibility="visible"
                         android:id="@+id/edit_rule_edit_sound_container"
                         android:layout_marginHorizontal="10dp"
-                        android:layout_marginBottom="6dp"
                         app:layout_constraintTop_toBottomOf="@+id/constraintLayout7"
                         app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent">
@@ -454,6 +475,7 @@
                             android:textSize="16dp"
                             android:textColor="#A5A5A5"
                             android:layout_width="0dp"
+                            android:layout_margin="2dp"
                             android:layout_height="wrap_content" android:id="@+id/edit_rule_selected_sound"
                             app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -481,11 +503,12 @@
             android:layout_height="match_parent"
             android:translationZ="10dp"
             android:id="@+id/edit_rule_name_popup"
-            android:backgroundTint="#80000000"
+            android:backgroundTint="#A0000000"
             android:visibility="gone"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent">
+
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -493,6 +516,7 @@
             <androidx.cardview.widget.CardView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    app:cardCornerRadius="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
