--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,4 +30,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/textView8"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
+    <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#0000"
+            android:padding="0dp"
+            android:layout_marginRight="10dp"
+            app:srcCompat="@drawable/baseline_settings_24"
+            android:id="@+id/open_settings_btn"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/rule_recycler_view"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
