--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,4 +8,136 @@
         android:layout_height="match_parent"
         tools:context=".activities.SettingsActivity">
 
+
+
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent">
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:padding="14dp"
+                    android:id="@+id/backup_rules_setting"
+                    android:layout_height="match_parent">
+
+                <TextView
+                        android:text="TextView"
+                        android:textSize="18dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" android:id="@+id/textView10"
+                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>
+                <TextView
+                        android:text="TextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" android:id="@+id/textView11"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:textColor="@android:color/system_accent2_400"
+                        app:layout_constraintTop_toBottomOf="@+id/textView10"/>
+                <ImageView
+                        android:layout_width="wrap_content"
+                        android:padding="0dp"
+                        android:scaleX="1.3"
+                        android:scaleY="1.3"
+                        android:layout_height="wrap_content" app:srcCompat="@drawable/baseline_keyboard_arrow_right_24"
+                        android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="#4b94b0"
+                    tools:layout_editor_absoluteX="0dp" android:id="@+id/view"
+                    android:layout_marginBottom="10dp"/>
+
+        </LinearLayout>
+    </ScrollView>
+
+
+
+    <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:backgroundTint="#80000000"
+            app:cardCornerRadius="0dp"
+            android:visibility="gone"
+            android:id="@+id/backup_rules_popup" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+
+            <androidx.cardview.widget.CardView
+                    android:layout_width="259dp"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="?attr/colorOnSecondary"
+                    app:cardCornerRadius="10dp"
+                    android:id="@+id/CardView" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
+
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                    <Button
+                            android:text="Backup"
+                            android:layout_width="wrap_content"
+                            android:layout_margin="14dp"
+                            android:layout_height="wrap_content" android:id="@+id/backup_rules_btn"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toStartOf="@+id/space"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
+                    <Button
+                            android:text="Restore"
+                            android:layout_width="wrap_content"
+                            android:layout_margin="14dp"
+                            android:layout_height="wrap_content" android:id="@+id/restore_rules_btn"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/space"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
+                    <TextView
+                            android:text="Backup/Restore"
+                            android:layout_width="wrap_content"
+                            android:textSize="26dp"
+                            android:layout_marginTop="12dp"
+                            android:layout_height="wrap_content" android:id="@+id/textView2"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
+                            android:textStyle="bold"/>
+                    <TextView
+                            android:text="Restoring a backup will overwrite existing tasks. \n\n The backup only contains rules."
+                            android:textAlignment="center"
+                            android:textSize="14dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_width="223dp"
+                            android:layout_height="wrap_content" android:id="@+id/textView3"
+                            app:layout_constraintTop_toBottomOf="@+id/textView2"
+                            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
+                    <Space
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+                            android:id="@+id/space"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
