--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -26,18 +26,18 @@
                     android:layout_height="match_parent">
 
                 <TextView
-                        android:text="TextView"
+                        android:text="Backup/Restore Rules"
                         android:textSize="18dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:id="@+id/textView10"
                         app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>
                 <TextView
-                        android:text="TextView"
+                        android:text="To/from a file"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:id="@+id/textView11"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        android:textColor="@android:color/system_accent2_400"
+                        android:textColor="#9E9E9E"
                         app:layout_constraintTop_toBottomOf="@+id/textView10"/>
                 <ImageView
                         android:layout_width="wrap_content"
