--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -19,6 +19,195 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:padding="14dp"
+                    android:layout_height="match_parent">
+
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" android:id="@+id/constraintLayout8"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                    <TextView
+                            android:text="Active Hours"
+                            android:textSize="18dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" android:id="@+id/textView12"
+                            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>
+                    <TextView
+                            android:text="Rules will not trigger outside the specified hours"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content" android:id="@+id/textView13"
+                            app:layout_constraintStart_toStartOf="parent"
+                            android:textColor="#9E9E9E"
+                            app:layout_constraintTop_toBottomOf="@+id/textView12"
+                            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout8"
+                            app:layout_constraintEnd_toStartOf="@+id/enable_inactive_rule_hours_switch"/>
+                    <Switch
+                            android:text=""
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" android:id="@+id/enable_inactive_rule_hours_switch"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:id="@+id/edit_rule_inactive_hours"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout8"
+                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">
+
+                    <TextView
+                            android:text="Active days"
+                            android:textSize="20dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" android:id="@+id/textView18"
+                            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"/>
+
+
+                    <LinearLayout
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            app:layout_constraintTop_toBottomOf="@+id/textView18"
+                            android:id="@+id/linearLayout2" app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent">
+
+
+                        <com.google.android.material.chip.Chip
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textAlignment="center"
+                                android:text="M"
+                                app:chipMinHeight="42dp"
+                                android:layout_weight="1"
+                                android:id="@+id/chip3" />
+                        <com.google.android.material.chip.Chip
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textAlignment="center"
+                                android:text="T"
+                                app:chipMinHeight="42dp"
+                                android:layout_weight="1"
+                                android:id="@+id/chip3" />
+                        <com.google.android.material.chip.Chip
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textAlignment="center"
+                                android:text="W"
+                                app:chipMinHeight="42dp"
+                                android:layout_weight="1"
+                                android:id="@+id/chip3" />
+                        <com.google.android.material.chip.Chip
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textAlignment="center"
+                                android:text="T"
+                                app:chipMinHeight="42dp"
+                                android:layout_weight="1"
+                                android:id="@+id/chip3" />
+                        <com.google.android.material.chip.Chip
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textAlignment="center"
+                                android:text="F"
+                                app:chipMinHeight="42dp"
+                                android:layout_weight="1"
+                                android:id="@+id/chip3" />
+                        <com.google.android.material.chip.Chip
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAlignment="center"
+                            android:text="S"
+                            app:chipMinHeight="42dp"
+                            android:layout_weight="1"
+                            android:id="@+id/chip3" />
+                        <com.google.android.material.chip.Chip
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textAlignment="center"
+                                android:text="S"
+                                app:chipMinHeight="42dp"
+                                android:layout_weight="1"
+                                android:id="@+id/chip3" />
+
+
+
+
+
+
+                    </LinearLayout>
+
+
+                    <TextView
+                            android:text="Active hours"
+                            android:textSize="20dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" android:id="@+id/textView17"
+                            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"/>
+                    <LinearLayout
+                            android:orientation="horizontal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginTop="10dp"
+                            app:layout_constraintTop_toBottomOf="@+id/textView17"
+                            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent">
+
+                        <TextView
+                                android:text="From"
+                                android:textSize="18dp"
+                                android:layout_width="wrap_content"
+                                android:gravity="center"
+                                android:layout_height="match_parent" android:id="@+id/textView15"/>
+
+                        <com.google.android.material.chip.Chip
+                                android:text="12:00 PM"
+                                android:layout_width="wrap_content"
+                                android:layout_marginHorizontal="16dp"
+                                android:layout_height="38dp"
+                                app:chipMinHeight="42dp"
+                                android:id="@+id/edit_active_from_hour_chip"/>
+
+                        <TextView
+                                android:text="to"
+                                android:textSize="18dp"
+                                android:gravity="center"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:id="@+id/textView14"/>
+
+                        <com.google.android.material.chip.Chip
+                                android:text="07:00 AM"
+                                android:layout_width="wrap_content"
+                                android:layout_marginLeft="16dp"
+                                android:layout_height="38dp"
+                                app:chipMinHeight="42dp" android:id="@+id/edit_active_to_hour_chip"/>
+
+                    </LinearLayout>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="#4b94b0"/>
+
+
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:padding="14dp"
@@ -53,9 +242,7 @@
             <View
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
-                    android:background="#4b94b0"
-                    tools:layout_editor_absoluteX="0dp" android:id="@+id/view"
-                    android:layout_marginBottom="10dp"/>
+                    android:background="#4b94b0"/>
 
         </LinearLayout>
     </ScrollView>
