--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -385,7 +385,7 @@
                             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                             android:textStyle="bold"/>
                     <TextView
-                            android:text="Restoring a backup will overwrite existing tasks. \n\n The backup only contains rules."
+                            android:text="Restoring a backup will overwrite existing rules. \n\n The backup only contains rules."
                             android:textAlignment="center"
                             android:textSize="14dp"
                             android:layout_marginTop="8dp"
