--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -42,7 +42,7 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
-                            android:text="Active Hours"
+                            android:text="Do Not Disturb"
                             android:textSize="18dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" android:id="@+id/textView12"
