Bug Fix: Active Days Setting UI
Bug Fix: Active days buttons not displaying on older Android versions

--- a/app/src/main/res/layout/activity_edit_rule.xml
+++ b/app/src/main/res/layout/activity_edit_rule.xml
@@ -101,6 +101,7 @@
                         android:layout_marginHorizontal="6dp"
                         android:layout_marginBottom="6dp"
                         tools:listitem="@layout/item_app"
+                        tools:itemCount="6"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         android:orientation="horizontal"
                         android:id="@+id/edit_rule_selected_apps_recycler"
