Feature: Added Override Volume Setting Slider (no functionality)

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -282,6 +282,76 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:padding="14dp"
+                    android:layout_height="match_parent">
+
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" android:id="@+id/constraintLayout8"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                    <TextView
+                            android:text="Override Volume"
+                            android:textSize="18dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" android:id="@+id/textView21"
+                            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>
+                    <TextView
+                            android:text="Override the system notification volume for the rules"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content" android:id="@+id/textView20"
+                            app:layout_constraintStart_toStartOf="parent"
+                            android:textColor="#9E9E9E"
+                            app:layout_constraintTop_toBottomOf="@+id/textView21"
+                            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout8"
+                            app:layout_constraintEnd_toStartOf="@+id/enable_override_notification_volume_switch"/>
+                    <Switch
+                            android:text=""
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" android:id="@+id/enable_override_notification_volume_switch"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:id="@+id/edit_override_notification_volume"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout8"
+                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">
+
+                    <com.google.android.material.slider.Slider
+                            android:id="@+id/rule_notification_volume_slider"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:valueFrom="0"
+                            android:valueTo="100"
+                            android:value="50"
+                            android:stepSize="1" app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"/>
+
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="#4b94b0"/>
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:padding="14dp"
                     android:id="@+id/backup_rules_setting"
                     android:layout_height="match_parent">
 
