Improvement: Use Material Design Switches

--- a/app/src/main/res/layout/activity_edit_rule.xml
+++ b/app/src/main/res/layout/activity_edit_rule.xml
@@ -41,7 +41,7 @@
                     app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/edit_rule_activate_switch"/>
-            <Switch
+            <com.google.android.material.materialswitch.MaterialSwitch
                     android:text=""
                     android:layout_width="wrap_content"
                     android:layout_margin="4dp"
@@ -259,7 +259,7 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintEnd_toStartOf="@+id/edit_rule_toggle_vibration_switch"
                             app:layout_constraintBottom_toBottomOf="parent"/>
-                    <Switch
+                    <com.google.android.material.materialswitch.MaterialSwitch
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="4dp"
@@ -473,7 +473,7 @@
                             app:layout_constraintEnd_toStartOf="@+id/edit_rule_toggle_sound_switch"
                             app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"/>
-                    <Switch
+                    <com.google.android.material.materialswitch.MaterialSwitch
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="4dp"
