--- a/app/src/main/res/layout/component_rule.xml
+++ b/app/src/main/res/layout/component_rule.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="10dp">
-        <Switch
+        <com.google.android.material.materialswitch.MaterialSwitch
                 android:text=""
                 android:layout_marginRight="5dp"
                 android:layout_width="wrap_content"
