--- a/app/src/main/res/layout/activity_app_select.xml
+++ b/app/src/main/res/layout/activity_app_select.xml
@@ -47,7 +47,7 @@
                 app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <Switch
+        <com.google.android.material.materialswitch.MaterialSwitch
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
