Minor UI Improvements

--- a/app/src/main/res/layout/activity_app_select.xml
+++ b/app/src/main/res/layout/activity_app_select.xml
@@ -58,7 +58,8 @@
                 android:text="Selected"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
+                android:textSize="18sp"
+                android:layout_marginRight="14dp"
                 android:id="@+id/textView7"
                 app:layout_constraintEnd_toStartOf="@+id/app_select_active_switch"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/app_search_bar"/>
